# adk-gemini-cli-bridge

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENT_PROTOCOL.md  BROKENPIPE_ALTERNATIVES.md  CHANGELOG.md  CLI_014_STDERR_FIX.md  CONTRIBUTING.md  DEBUGGING_JOURNEY.md  LICENSE  MCP_CONFLICTS_RESOLUTION.md  PERFORMANCE_REPORT.md  PROTOCOL_VERSION_FIX.md  README.md  SESSION_SUMMARY.md  agent_level1.py  bridge.py  compare_mcp.py  config.yaml  diagnose.py  mcp_servers.json  mcp_servers.json.template  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.gemini/: mcp_servers.json
.github/workflows/: ci.yml  pre-commit.yml
Documents/oriacle-mini-app_-symbolic-guidance/: App.tsx  constants.ts  index.html  metadata.json
Documents/oriacle-mini-app_-symbolic-guidance/components/: Button.tsx  InterpretationDisplay.tsx  LoadingSpinner.tsx  QuestionInput.tsx  SymbolCard.tsx  SystemSelector.tsx
ai-miniapps-tests/oriacle-labs/: package.json  types.ts
ai-miniapps-tests/oriacle-labs/services/: geminiService.ts
tests/: __init__.py  conftest.py  test_config.py  test_dispatch.py  test_metrics.py  test_validation.py
